@@ -66,7 +66,7 @@ AutoIncBuild=1
 MajorVer=0
 MinorVer=0
 Release=13
-Build=23
+Build=24
 Debug=0
 PreRelease=1
 Special=0
@@ -77,7 +77,7 @@ CodePage=1252
 [Version Info Keys]
 CompanyName=Damjan Zobo Cvetko
 FileDescription=DBGP Plugin for Notepad++
-FileVersion=0.0.13.23
+FileVersion=0.0.13.24
 InternalName=
 LegalCopyright=GPL
 LegalTrademarks=
