@@ -1,3 +1,8 @@
+2012-08-09 v0.13 beta
+
+On demand fetching of lower levels of property tree. If you set max_depth to 1
+each new level will be fetched from the debugging engine.
+
 2010-08-12 v0.12 beta
 
 Added max_data to config dialog.
